--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>黑煤球安麗站</title>
 <meta name="description" content="歌手華晨宇">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
 <main>
 <div class="mainvisual">
-<img src="img/我們2.jpg" alt="主視覺圖片" width="480" height="270">
+<img src="我們2.jpg" alt="主視覺圖片" width="480" height="270">
 </div>
 <article id="profile">
 <div class="inner">
@@ -82,7 +82,7 @@
 <section>
 <h3>專輯</h3>
 <section class="performer">
-<img src="img/卡西.jpg" width="150" hieght="150">
+<img src="卡西.jpg" width="150" hieght="150">
 <h4>卡西莫多的禮物</h4>
 <p>01Why Nobody Fights	 	
  02微光	 	
@@ -98,7 +98,7 @@
 </section>
 
 <section class="performer">
-<img src="img/異類.jpg" width="150" hieght="150">
+<img src="異類.jpg" width="150" hieght="150">
 <h4>異類</h4>
 <p>
 01我管你
@@ -115,7 +115,7 @@
 </section>
 
 <section class="performer">
-<img src="img/H.jpg" width="150" hieght="150">
+<img src="H.jpg" width="150" hieght="150">
 <h4>H</h4>
 <p>
 01 巨鹿
@@ -130,7 +130,7 @@
 </section>
 
 <section class="performer">
-<img src="img/新世界.jpg" width="150" hieght="150">
+<img src="新世界.jpg" width="150" hieght="150">
 <h4>新世界NEW WORLD</h4>
 <p>
 A.<br>
