--- a/project.htm
+++ b/project.htm
@@ -5,7 +5,7 @@
 <div id="head">
 <table width="1000"border="0"cellpadding="0"cellspacing="0">
 <tr>
-      <td><img src="img/8.jpg"width="1094"height="493"</td>
+      <td><img src="8.jpg"width="1094"height="493"</td>
       
 </tr>
 
