--- a/project.htm
+++ b/project.htm
@@ -29,7 +29,7 @@
 <div id="cont"><br/>
 <table border="0" width="1000" cellpadding="1"cellspacing="1" bgcolor="#999999">
 <tr>
-<td align="center" bgcolor="#A42D00" colspan="2" valign="center" ><font size="7"><font color="#ffffff"><b>各站微博</b></font></td>
+<td align="center" bgcolor="#A42D00" colspan="2" valign="center" ><font size="7"><font color="seashell"><b>各站微博</b></font></td>
 </tr>
 
 <tr>
