--- a/project.htm
+++ b/project.htm
@@ -47,11 +47,11 @@
 </table>
 </td>
 
-<td width="200" bgcolor="#FFFFFF" valign="top" >
+<td width="200" bgcolor="#linen" valign="top" >
 <table width="200" cellpadding="1"cellspacing="1" >
 
 <tr>
-<th align="center" bgcolor="#CC6600" colspan="5" valign="center" ><font size="5"><b>官方活動圖</b></font></td>
+<th align="center" bgcolor="salmon" colspan="5" valign="center" ><font size="5"><b>官方活動圖</b></font></td>
 </tr>
 
 <tr>
@@ -68,7 +68,7 @@
 </tr>
 
 <tr>
-<th align="center" bgcolor="#CC6600" colspan="5" valign="center" ><font size="5"><b>飯拍站</b></font></td>
+<th align="center" bgcolor="salmon" colspan="5" valign="center" ><font size="5"><b>飯拍站</b></font></td>
 </tr>
 
 <tr>
@@ -88,7 +88,7 @@
 </tr>
 
 <tr>
-<th align="center" bgcolor="#CC6600" colspan="5" valign="center" ><font size="5"><b>火星村畫手</b></font></td>
+<th align="center" bgcolor="salmon" colspan="5" valign="center" ><font size="5"><b>火星村畫手</b></font></td>
 </tr>
 
 <tr>
