--- a/project.htm
+++ b/project.htm
@@ -47,7 +47,7 @@
 </table>
 </td>
 
-<td width="200" bgcolor="#linen" valign="top" >
+<td width="200" bgcolor="linen" valign="top" >
 <table width="200" cellpadding="1"cellspacing="1" >
 
 <tr>
